--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 </head>
 <body>
     <div class="title">
-        <h1>Fanpage : Pentatonix</h1>
+        <h1>Fanpage : The Legend of Zelda</h1>
     </div>
     <div class="intro">
         <p>Welcome to my fanpage. </p>
-        <p>Here you can find some information about my favorite artist : Pentatonix</p>
+        <p>Here you can find some information about my favorite game series : The Legend of Zelda</p>
 
-        <p>I really like this band, because all their songs are sung acapella.</p>
-        <p>That means, they don't use any instruments!</p>
-        <p>They do everything with their voices!</p>
+        <p>I really love this game series because of its amazing adventures and puzzles.</p>
+        <p>The games feature Link, a hero who must save Princess Zelda and the kingdom of Hyrule!</p>
+        <p>Each game offers unique gameplay mechanics and memorable music!</p>
     </div>
     <div class="youtube">
         <iframe width="560" 
                 height="315" 
-                src="https://www.youtube.com/embed/3MteSlpxCpo" 
+                src="https://www.youtube.com/embed/zw47_q9wbBE" 
                 title="YouTube video player" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
