--- a/photos.html
+++ b/photos.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <div class="title">
-        <h1>Fanpage : Pentatonix</h1>
+        <h1>Fanpage : The Legend of Zelda</h1>
     </div>
     <div class="subtitle">
         <h2>Photos</h2>
     </div>
     <div class="photos">
         <div class="photo-gallery">
-            <img src="img/pentatonix1.jpg" alt="Pentatonix Group Photo" class="photo">
-            <img src="img/pentatonix2.jpg" alt="Pentatonix Performance" class="photo">
-            <img src="img/pentatonix3.jpg" alt="Pentatonix Album Cover" class="photo">
+            <img src="img/zelda1.jpg" alt="Zelda Game Screenshot" class="photo">
+            <img src="img/zelda2.jpg" alt="Link Character" class="photo">
+            <img src="img/zelda3.jpg" alt="Hyrule Kingdom" class="photo">
         </div>
     </div>
     <a href="index.html"><input type="button" value="back"></a>
