Add real world Zelda statistics

--- a/statistics.html
+++ b/statistics.html
@@ -14,7 +14,17 @@
         <h2>Statistics</h2>
     </div>
     <div class="statistics">
-        Some statistics will be added later Here.
+        <h3>The Legend of Zelda Statistics</h3>
+        <ul>
+            <li><strong>First Game Released:</strong> 1986</li>
+            <li><strong>Total Games in Series:</strong> 19+ main titles</li>
+            <li><strong>Total Sales:</strong> Over 130 million copies worldwide</li>
+            <li><strong>Best-Selling Game:</strong> Breath of the Wild (31+ million copies)</li>
+            <li><strong>Development Company:</strong> Nintendo EPD</li>
+            <li><strong>Creator:</strong> Shigeru Miyamoto</li>
+            <li><strong>Latest Release:</strong> Tears of the Kingdom (2023)</li>
+            <li><strong>Platforms:</strong> Nintendo consoles and handhelds</li>
+        </ul>
     </div>
     <a href="index.html"><input type="button" value="back"></a>
 </body>
